objects/cterminal__Transaction_Update_Result__c.object
<CustomObject>
    <fields>
        <fullName>cterminal__Developer_Error_Message__c</fullName>
        <label>Developer Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cterminal__Ended_On__c</fullName>
        <label>Ended On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cterminal__Error_Code__c</fullName>
        <label>Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cterminal__Error_Message__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cterminal__From_Date__c</fullName>
        <label>From Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cterminal__HTTP_Status__c</fullName>
        <label>HTTP Status</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cterminal__Initiating_Batch_Id__c</fullName>
        <externalId>true</externalId>
        <label>Initiating Batch Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cterminal__Matched_Transaction_Count__c</fullName>
        <description>Indicates the number of transactions that matched an existing transaction in Salesforce</description>
        <label>Matched Transaction Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cterminal__Next_Page_HATEOS__c</fullName>
        <label>Next Page HATEOS</label>
        <length>2400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cterminal__Processing_Status__c</fullName>
        <label>Processing Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CREATED</fullName>
                </value>
                <value>
                    <fullName>PROCESSING</fullName>
                </value>
                <value>
                    <fullName>ERROR</fullName>
                </value>
                <value>
                    <fullName>COMPLETED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cterminal__Request_Id__c</fullName>
        <label>Request Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cterminal__Started_On__c</fullName>
        <label>Started On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cterminal__Terminal_Business__c</fullName>
        <label>Terminal Business</label>
        <referenceTo>cterminal__Terminal_Business__c</referenceTo>
        <relationshipLabel>Transaction Update Results</relationshipLabel>
        <relationshipName>Transaction_Update_Results</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>cterminal__Total_Pages__c</fullName>
        <label>Total Pages</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cterminal__Transaction_Count__c</fullName>
        <label>Transaction Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cterminal__Transaction_Remaining__c</fullName>
        <label>Transaction Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cterminal__Transactions_Added__c</fullName>
        <label>Transactions Added</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Transaction Update Result</label>
    <nameField>
        <label>Batch Date</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transaction Update Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>